# PrismChrono

./: CARGO_MAKE.md  Makefile.toml  README.md  build.sh  roadmap.md
TriFS-24/: .windsurfrules  README.md
TriFS-24/crates/trifs24_allocator/: Cargo.toml
TriFS-24/crates/trifs24_allocator/src/: cache.rs  checksum.rs  connectors.rs  crypto.rs  errors.rs  index.rs  journal.rs  lib.rs  logging.rs  metadata.rs  metrics.rs  optimizer.rs  predictive.rs  preload.rs  profiler.rs  snapshot.rs  vector_index.rs  vfs.rs
TriFS-24/crates/trifs24_allocator/tests/: bdd.rs
TriFS-24/crates/trifs24_allocator/tests/features/: allocation.feature  cache.feature  cli.feature  connectors.feature  errors.feature  indexing.feature  journal.feature  logging.feature  metadata.feature  metrics.feature  optimizer.feature  predictive.feature  preload.feature  profiler.feature  snapshot.feature  vfs.feature
benchmarks/: README.md
docs/: README.md  ameliorations_architecture.md  ameliorations_avancees.md  ameliorations_avancees_benchmarks.md  ameliorations_pipeline.md  architecture_technique.md  benchmarking_guide.md  guide_ameliorations_avancees.md  guide_utilisation.md  nouvelles_instructions_ternaires.md  plan_implementation_ameliorations.md  plan_implementation_ameliorations_avancees.md  privilege_system_v0.1.md  privilege_system_v0.2.md
prismChrono_VHDL/: Dockerfile  README.md  docker-run.sh
prismChrono_sim/: Cargo.toml  README.md  neural.d
prismchrono_asm/: Cargo.toml  README.md  halt.tobj
spec/: benchmark.md  p1.md  p2.md  p3.md  p4.md
sprints/: SPRINT.md  sprint-10.md  (+8 more)
(+316 files in other folders)
