[package]
name = "trifs24_allocator"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
log = "0.4"
env_logger = "0.10"
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
cucumber = "0.10"
cucumber-codegen = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false
